postgresql/base/adminer-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  namespace: common
  labels:
    app.kubernetes.io/component: ui
    app.kubernetes.io/part-of: postgresql
    app.kubernetes.io/name: adminer
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: ui
      app.kubernetes.io/part-of: postgresql
      app.kubernetes.io/name: adminer
  replicas: 1
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/component: ui
        app.kubernetes.io/part-of: postgresql
        app.kubernetes.io/name: adminer
    spec:
      containers:
      - name: adminer
        image: adminer:4.17.1
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "64m"
          limits:
            memory: "256Mi"
            cpu: "500m"
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
