postgresql/base/postgresql-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: common
  labels:
    app.kubernetes.io/component: db
    app.kubernetes.io/part-of: postgresql
    app.kubernetes.io/name: postgresql
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: db
      app.kubernetes.io/part-of: postgresql
      app.kubernetes.io/name: postgresql
  replicas: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/component: db
        app.kubernetes.io/part-of: postgresql
        app.kubernetes.io/name: postgresql
    spec:
      containers:
      - name: postgresql
        image: postgres:17.4
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgresql-volume
          mountPath: /var/lib/postgresql/data
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
      volumes:
      - name: postgresql-volume
        persistentVolumeClaim:
          claimName: postgresql
