postgresql/base/postgresql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql
  namespace: common
  labels:
    app.kubernetes.io/component: db
    app.kubernetes.io/part-of: postgresql
    app.kubernetes.io/name: postgresql
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: db
      app.kubernetes.io/part-of: postgresql
      app.kubernetes.io/name: postgresql
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/component: db
        app.kubernetes.io/part-of: postgresql
        app.kubernetes.io/name: postgresql
    spec:
      containers:
      - name: postgresql
        image: postgres:17.4

        args:
          - "-c"
          - "config_file=/etc/postgresql/postgresql.conf"

        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgresql-volume
          mountPath: /var/lib/postgresql/data
        - name: postgresql-config
          mountPath: /etc/postgresql
          subPath: postgresql.conf
        - name: postgresql-hba
          mountPath: /etc/postgresql/pg_hba.conf
          subPath: pg_hba.conf
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "1000m"
            memory: "2Gi"
        livenessProbe:
          exec:
            command:
              - pg_isready
              - -U
              - postgres
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
              - pg_isready
              - -U
              - postgres
          initialDelaySeconds: 5
          periodSeconds: 5
      nodeSelector:
        node-role.kubernetes.io/control-plane: "true"
      tolerations:
      - key: "node-role.kubernetes.io/control-plane"
        operator: "Exists"
        effect: "NoSchedule"
      volumes:
      - name: postgresql-volume
        persistentVolumeClaim:
          claimName: postgres-local-pvc
      - name: postgresql-config
        configMap:
          name: postgresql-config
      - name: postgresql-hba
        configMap:
          name: postgresql-hba
